--- a/styles/default.css
+++ b/styles/default.css
@@ -10,7 +10,7 @@ svg {
   position: fixed;
   width: 100%;
   height: 100%;
-  top: 28px;
+  top: 26px;
   left: 0;
   background-color: #FFFFFF; }
 
@@ -19,8 +19,8 @@ textarea, input {
   font-size: 16px; }
 
 .banner {
-  height: 28px;
-  background-color: #000000;
+  height: 26px;
+  background-color: #2b2b32;
   color: #FFFFFF; }
   .banner .title {
     float: left;
@@ -155,7 +155,7 @@ textarea, input {
   width: 600px;
   height: 400px;
   margin: auto;
-  background-color: #000000;
+  background-color: #2b2b32;
   color: #ffffff;
   border-radius: 5px;
   font-size: 32px;
