--- a/styles/default.css
+++ b/styles/default.css
@@ -61,23 +61,44 @@ textarea, input {
 .note {
   cursor: pointer; }
 
+.notes .region {
+  fill: #FFFFFF;
+  opacity: 0.1; }
+
+.marker {
+  fill: #2b2b32; }
+  .marker text {
+    fill: #FFFFFF;
+    font-size: 12px; }
+  .marker.collapsed {
+    cursor: pointer; }
+  .marker .del {
+    cursor: pointer; }
+
 .pointer {
   fill: #D1D1D1;
   pointer-events: none; }
 
-.note-popup {
+.delete {
+  border: 1px solid #FFFFFF;
+  border-radius: 4px;
+  color: #FFFFFF;
+  float: right;
+  cursor: pointer;
+  padding: 6px 10px 6px 6px; }
+
+.note-popup, .marker-popup {
   position: absolute;
   border: 2px solid #EBEBEB;
   background-color: #EBEBEB;
   border-radius: 4px;
   padding: 5px;
-  width: 400px;
-  height: 200px; }
-  .note-popup .date {
+  box-sizing: border-box; }
+  .note-popup .date, .marker-popup .date {
     float: left;
     margin-bottom: 5px;
     font-size: 13px; }
-  .note-popup .content {
+  .note-popup .content, .marker-popup .content {
     background-color: transparent;
     border: none;
     border-top: 1px solid #E0E0E0;
@@ -86,49 +107,55 @@ textarea, input {
     height: 77%;
     resize: none;
     overflow-y: visible; }
-  .note-popup .footer {
+  .note-popup .footer, .marker-popup .footer {
     position: absolute;
     bottom: 4px;
     right: 4px;
     width: 98%;
     text-align: center; }
-    .note-popup .footer .delete {
-      border: 1px solid #FFFFFF;
-      border-radius: 4px;
-      color: #FFFFFF;
-      float: right;
-      cursor: pointer;
-      padding: 6px 10px; }
 
-.up-carat:before {
-  content: '\e801';
-  top: -23px;
-  position: absolute;
-  left: 191.5px;
-  font-size: 32px;
-  font-family: fontello;
-  color: #EBEBEB; }
+.popup-caret {
+  fill: #EBEBEB; }
 
-.down-carat:before {
-  content: '\e802';
-  top: 200px;
-  position: absolute;
-  left: 191.5px;
-  font-size: 32px;
-  font-family: fontello;
-  color: #EBEBEB; }
+.marker-popup {
+  position: relative;
+  height: 100px;
+  width: 300px;
+  margin: auto;
+  top: 150px; }
+  .marker-popup .delete {
+    background-color: #000000; }
 
-.new-note-popup {
+.new-note-popup, .new-marker-popup {
   background-color: #EBEBEB;
   position: relative;
   top: 150px;
   width: 450px;
-  height: 250px;
   text-align: center;
   margin: auto;
   border-radius: 4px; }
-  .new-note-popup div {
+  .new-note-popup div, .new-marker-popup div {
     padding-top: 4px; }
+  .new-note-popup .save, .new-marker-popup .save {
+    border: 1px solid #FFFFFF;
+    border-radius: 4px;
+    background-color: #7FDFF9;
+    color: #000000;
+    padding: 6px 10px; }
+
+.new-marker-popup {
+  height: 100px; }
+  .new-marker-popup div {
+    padding-bottom: 20px; }
+  .new-marker-popup input.label {
+    width: 50%; }
+  .new-marker-popup input.date {
+    width: 25%; }
+  .new-marker-popup .save {
+    display: inline; }
+
+.new-note-popup {
+  height: 250px; }
   .new-note-popup input {
     width: 177px;
     padding: 4px;
@@ -142,14 +169,9 @@ textarea, input {
     margin-top: 4px;
     resize: none; }
   .new-note-popup .save {
-    border: 1px solid #FFFFFF;
-    border-radius: 4px;
+    float: right;
     display: block;
-    margin: 4px 10px;
-    background-color: #7FDFF9;
-    color: #000000;
-    padding: 6px 10px;
-    float: right; }
+    margin: 4px 10px; }
   .new-note-popup .invalid {
     border: 1px solid #FF0000; }
 
