--- a/styles/default.css
+++ b/styles/default.css
@@ -21,7 +21,10 @@ textarea, input {
 .banner {
   height: 26px;
   background-color: #2b2b32;
-  color: #FFFFFF; }
+  color: #FFFFFF;
+  position: absolute;
+  top: 0px;
+  width: 100%; }
   .banner .title {
     float: left;
     background-image: url("../images/logo.png");
@@ -183,52 +186,95 @@ textarea, input {
   font-size: 18px; }
 
 .open-banner {
-  position: relative;
-  top: 50px;
-  width: 600px;
-  height: 400px;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
   margin: auto;
-  background-color: #2b2b32;
+  background-color: rgba(43, 43, 50, 0.75);
   color: #ffffff;
   border-radius: 5px;
   font-size: 32px;
-  padding: 20px 20px;
+  padding: 75px 20px;
   box-sizing: border-box;
-  text-align: center; }
+  text-align: center;
+  z-index: 100; }
   .open-banner img {
     text-align: center; }
   .open-banner .heading {
-    padding-bottom: 40px;
-    font-size: 42px; }
+    padding-bottom: 10px;
+    font-size: 62px; }
+  .open-banner .brief {
+    font-size: 16px;
+    color: #c3c3c3; }
+  .open-banner .note {
+    margin: 50px auto;
+    padding-top: 20px;
+    bottom: 50px;
+    width: 60%;
+    text-align: center;
+    font-size: 18px;
+    border-top: 1px solid rgba(255, 255, 255, 0.5); }
+    .open-banner .note a {
+      color: white;
+      font-style: italic; }
+    .open-banner .note span {
+      font-size: 14px; }
   .open-banner .controls {
-    position: absolute;
     width: 100%;
-    bottom: 25px;
+    padding-top: 25px;
     text-align: center; }
     .open-banner .controls button {
       font-size: 16px;
-      background-color: green;
+      background-color: #30a4eb;
       padding: 10px;
-      color: #ffffff;
+      color: #000;
       border-radius: 2px;
       border: none;
-      cursor: pointer; }
+      cursor: pointer;
+      margin: 5px; }
     .open-banner .controls button.demo {
-      background-color: blue; }
+      background-color: #33eb83; }
+  .open-banner .creator {
+    position: fixed;
+    bottom: 10px;
+    left: 10px;
+    background-image: url("../images/my-icon.png");
+    background-repeat: no-repeat;
+    background-size: 25px;
+    background-position: 2px 6px;
+    padding: 10px 30px;
+    text-align: left;
+    font-size: 12px;
+    height: 10px; }
+    .open-banner .creator a {
+      color: #FFFFFF; }
 
-.floating-login {
+button.google {
+  background-image: url("../images/google.png");
+  background-repeat: no-repeat;
+  background-size: 25px;
+  background-position: 2px 6px;
+  padding-left: 30px !important; }
+
+.floating-login, .floating-migrate {
   position: fixed;
-  bottom: 70px;
   width: 100%;
   text-align: center; }
-  .floating-login button {
+  .floating-login button, .floating-migrate button {
     font-size: 16px;
-    background-color: green;
+    background-color: #30a4eb;
     padding: 10px;
-    color: #ffffff;
+    color: #000;
     border-radius: 2px;
     border: none;
     cursor: pointer; }
+
+.floating-migrate {
+  top: 70px; }
+
+.floating-login {
+  bottom: 70px; }
 
 .shortcuts {
   position: fixed;
